[workspace]
members = [
    "crates/ratchet-hub",
    "crates/ratchet-core",
    "crates/ratchet-web",
    "crates/ratchet-loader",
    "crates/ratchet-models",
    "crates/ratchet-nn", 
    "crates/ratchet-hub", 
]
resolver = "2"

[profile.test]
debug = 2
debug-assertions = true

[profile.release]
panic = 'abort'
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 2

[workspace.dependencies]
wgpu = { version = "0.18", features = ["expose-ids", "fragile-send-sync-non-atomic-wasm"] }
anyhow = "1.0.40"
bytemuck = { version = "1.14.0", features=["wasm_simd", "aarch64_simd", "extern_crate_alloc"] }
num-traits = "0.2.17"
half = { version = "2.3.1", features = ["num-traits", "bytemuck"] }
derive-new = "0.6.0"
log = "0.4.20"
thiserror = "1.0.56"
byteorder = "1.5.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-test = "0.3.34"
npyz = { version = "0.8.3"}
