[workspace]
members = [
    "crates/ratchet-hub",
    "crates/ratchet-core",
    "crates/ratchet-web",
    "crates/ratchet-loader",
    "crates/ratchet-models",
    "crates/ratchet-nn", 
    "crates/ratchet-hub", 
    "crates/ratchet-cli",
]
resolver = "2"

[profile.test]
debug = 2
debug-assertions = true

[profile.release]
panic = 'abort'
lto = "fat"
codegen-units = 1 

[profile.profiling]
inherits = "release"
debug = 2

[workspace.dependencies]
wgpu = { version = "0.18", features = ["expose-ids", "fragile-send-sync-non-atomic-wasm"] }
bytemuck = { version = "1.14.0", features=["wasm_simd", "aarch64_simd", "extern_crate_alloc"] }
num-traits = "0.2.17"
half = { version = "2.3.1", features = ["num-traits", "bytemuck"] }
derive-new = "0.6.0"
log = "0.4.20"
thiserror = "1.0.56"
byteorder = "1.5.0"
npyz = { version = "0.8.3"}
hf-hub = "0.3.2"
serde = "1.0.197"
anyhow = "1.0.79"
tokenizers = "0.19.1" 

js-sys = "0.3.64"
wasm-bindgen = "0.2.91"
wasm-bindgen-test = "0.3.34"
cfg-if = "1.0.0"
chrono = "0.4.35"
clap = "4.5.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dot3 = "0.1.0"
encase = { git = "https://github.com/cwfitzgerald/encase", branch = "add-member" }
env_logger = "0.11.3"
fern = "0.6.2"
getrandom = "0.2"
glam = "0.27.0"
globwalk = "0.8.1"
gloo-net = { version = "0.5.0", default-features = false }
hound = "3.5.1"
indexed_db_futures = "0.4.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num = "0.4.1"
numpy = "0.20.0"
parking_lot = "0.12.1"
pathdiff = "0.2.1"
pollster = "0.3.0"
proptest = "1.4.0"
pyo3 = "0.20.2"
rand = "0.8.4"
rand_distr = "0.4.3"
realfft = "3.3.0"
regex = "1.10.3"
rustc-hash = "1.1.0"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.14"
serde_json = "1.0.114"
slotmap = "1.0.7"
smallvec = "1.11.2"
strum = "0.25"
strum_macros = "0.25"
tabled = "0.15.0"
tempfile = "3.3.0"
tera = "1.19.0"
test-strategy = "0.3.1"
tokio = "1.36.0"
uuid = "1.5.0"
wasm-bindgen-futures = "0.4.41"
web-sys = "0.3.64"
web-time = "1.0.0"
