[package]
name = "ratchet-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ratchet"
path = "src/bin/cli.rs"

[dependencies]
ratchet = { path = "../ratchet-core" }
ratchet-loader = { path = "../ratchet-loader" }
ratchet-models = { path = "../ratchet-models" }
ratchet-hub = { path = "../ratchet-hub" }
ratchet-nn = { path = "../ratchet-nn" }
log.workspace = true
clap = { workspace = true, features = ["derive"] }
hf-hub = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
tokenizers = { workspace = true } 
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
anyhow.workspace = true
