[package]
name = "ratchet-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A web-first, cross-platform ML framework."
keywords = [
    "llm",
    "wasm",
    "transformers",
    "webgpu",
    "ml",
    "machine-learning",
    "deep-learning",
]
repository = "https://github.com/FL33TW00D/ratchet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.39"
gloo = "0.11.0"
js-sys = "0.3.64"
futures-util = { version = "^0.3.28", features = ["io", "sink"] }
byteorder.workspace = true
thiserror.workspace = true
wasm-streams = "0.4.0"
ratchet = { path = "../ratchet-core" }

[dependencies.web-sys]
features = [
    'console',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'ReadableStream',
    'ReadableStreamGetReaderOptions',
    'ReadableStreamReaderMode',
    'Window',
    'Navigator',
    'StorageManager',
    'Cache',
    'CacheStorage',
]
version = "0.3.64"

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
