[package]
name = "ratchet"
version = "0.1.0"
edition = "2021"
build="build/main.rs"

[features]
default = ["rand", "testing"]
gpu-profiling = ["dep:tabled", "dep:itertools"]
rand = ["dep:rand", "dep:rand_distr"]
plotting = ["dep:dot3", "dep:tempfile"]
testing = ["dep:npyz", "dep:ndarray"]
pyo3 = ["dep:pyo3", "dep:numpy"]

[build-dependencies]
tera = "1.19.0"
thiserror = { workspace = true }
anyhow = { workspace = true }
globwalk = "0.8.1"
strum = "0.25"
strum_macros = "0.25"
serde = { version = "1.0.130", features = ["derive"] }
pathdiff = "0.2.1"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
derive-new = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
rustc-hash = "1.1.0"
slotmap = "1.0.7"
parking_lot = "0.12.1"
smallvec = "1.11.2"
encase = { git="https://github.com/cwfitzgerald/encase", branch="add-member", features=["smallvec","glam"] }
pollster = "0.3.0"
anyhow = "1.0.79"
getrandom = { version = "0.2", features = ["js"] } # Needed for wasm support in `num` trait
num = "0.4.1"
rand_distr = { version = "0.4.3", optional = true }
rand = { version = "0.8.4", optional = true }
lazy_static = "1.4.0"
glam = { version = "0.27.0" }
regex = "1.10.3"
npyz = { version = "0.8.3", optional = true }
ndarray = { version = "0.15.6", optional = true}
serde = { version = "1.0.130", features = ["derive"] }

#Plotting
dot3 = { version = "0.1.0", optional = true }
tempfile = { version = "3.3.0", optional = true }

# Profiling
tabled = { version = "0.15.0", optional = true }
itertools = { version = "0.12.1", optional = true }

pyo3 = { version = "0.20.2", features=["auto-initialize"], optional = true } 
numpy = { version = "0.20.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-intrusive = "0.5.0"
async-trait = "0.1.77"
wasm-bindgen = "0.2.84"
smallvec = { version = "1.11.2", features = ["serde"] }

[dev-dependencies]
env_logger = "0.11.1"
rand = "0.8.4"
test-strategy = "0.3.1"
proptest = "1.4.0"
ndarray = { version = "0.15.6"}
