[package]
name = "ratchet"
version = "0.1.0"
edition = "2021"

[features]
default = ["rand", "testing", "trace"]
gpu-profiling = ["dep:tabled", "dep:itertools"]
rand = ["dep:rand", "dep:rand_distr"]
plotting = ["dep:dot3", "dep:tempfile"]
testing = ["dep:npyz", "dep:ndarray"]
pyo3 = ["dep:pyo3", "dep:numpy", "dep:regex"]
trace = ["dep:uuid", "dep:web-time"]

[build-dependencies]
tera = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
globwalk = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
pathdiff = { workspace = true }

[dependencies]
ratchet-macros = { path = "../ratchet-macros"}
inline-wgsl = { git = "https://github.com/FL33TW00D/inline-wgsl.git", branch = "master" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
derive-new = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true 

rustc-hash = { workspace = true }
slotmap = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
encase = { workspace = true, features = ["smallvec", "glam"] }
pollster = { workspace = true }
getrandom = { workspace = true, features = ["js"] } # Needed for wasm support in `num` trait
num = { workspace = true }
rand_distr = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
glam = { workspace = true }
npyz = { workspace = true, optional = true, features=["half"] }
ndarray = { workspace = true, optional = true }

#Plotting
dot3 = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# Profiling
tabled = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }

pyo3 = { workspace = true, features = ["auto-initialize"], optional = true } 
regex = { workspace = true, optional = true }
numpy = { workspace = true, optional = true, features=["half"]}

# Trace
uuid = { version="1.1.0", features = ["v4", "fast-rng"], optional = true }
web-time = { workspace = true, optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true 
futures-intrusive.workspace = true
wasm-bindgen-futures.workspace = true 

async-trait = "0.1.77"
smallvec = { workspace = true , features = ["serde"] }

[dev-dependencies]
env_logger = { workspace = true }
rand = { workspace = true }
test-strategy = { workspace = true }
proptest = { workspace = true }
ndarray = { workspace = true }
