[package]
name = "ratchet-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ratchet-loader = { path = "../ratchet-loader" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.64"
gloo = "0.11.0"
reqwest = "0.11.23"

[dependencies.web-sys]
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Navigator',
  'StorageManager',
  'CacheStorage'
]
version = "0.3.64"

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
