[package]
name = "ratchet-hub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A web-first, cross-platform ML framework."
keywords = ["llm","wasm","transformers","webgpu","ml","machine-learning","deep-learning"]
repository = "https://github.com/FL33TW00D/ratchet"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true 

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ratchet = { path = "../ratchet-core" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.64"
futures-util = { version = "^0.3.28", features = ["io", "sink"] }
indexed_db_futures = "0.4.1"
thiserror.workspace = true
anyhow.workspace = true
serde = "1.0.197"
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.14"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log.workspace = true
fern = "0.6.2"
chrono = "0.4.34"
gloo-net = { version = "0.5.0", default-features = false, features = ["http"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.6", features = ["js"] }

[dependencies.web-sys]
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
  'ReadableStreamGetReaderOptions',
  'ReadableStreamReaderMode',
  'ReadableStreamDefaultReader',
  'Window',
  'Navigator',
  'StorageManager',
  'Cache',
  'CacheStorage',
  'IdbKeyRange',
]
version = "0.3.64"

[dev-dependencies]
wasm-bindgen-test.workspace = true

