[package]
name = "ratchet-hub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A web-first, cross-platform ML framework."
keywords = ["llm","wasm","transformers","webgpu","ml","machine-learning","deep-learning"]
repository = "https://github.com/FL33TW00D/ratchet"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true 

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ratchet = { path = "../ratchet-core" }
ratchet-loader = { path = "../ratchet-loader" }
js-sys.workspace = true 
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true 

wasm-bindgen-futures = { workspace = true }
indexed_db_futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_bytes = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
gloo-net = { workspace = true, features = ["http"] }

[dependencies.web-sys]
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
  'ReadableStreamGetReaderOptions',
  'ReadableStreamReaderMode',
  'ReadableStreamDefaultReader',
  'Window',
  'Navigator',
  'StorageManager',
  'Cache',
  'CacheStorage',
  'IdbKeyRange',
]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.6", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test.workspace = true

