[package]
name = "ratchet-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratchet = { path = "../ratchet-core" }
half.workspace = true
byteorder.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
log.workspace = true
itertools = "0.12.1"

[dev-dependencies]
wasm-bindgen-test.workspace = true
hf-hub.workspace = true
tokio = { version = "1.36.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
