[package]
name = "ratchet-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratchet = { path = "../ratchet-core" }
half.workspace = true
byteorder.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
log.workspace = true
itertools = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test.workspace = true
hf-hub.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "io-util", "rt", "time"] }
