[package]
authors = [
    "Chris Fleetwood <chris@fleetwood.dev>",
]
name = "ratchet-macros"
keywords = []
edition = "2021"
readme.workspace = true
repository = "https://github.com/huggingface/ratchet"

[lib]
proc-macro = true

[features]
default = []
std = []

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0" }
