[package]
name = "ratchet-macros"
authors = ["Chris Fleetwood <chris@fleetwood.dev>"]
version = "0.1.0"
keywords = []
edition = "2021"
readme.workspace = true
repository = "https://github.com/huggingface/ratchet"

[lib]
proc-macro = true

[features]
default = []
std = []

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0" }
