[package]
name = "ratchet-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true 

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

[dependencies]
ratchet = { path = "../ratchet-core" }
ratchet-nn = { path = "../ratchet-nn" }
ratchet-loader = { path = "../ratchet-loader" }
byteorder.workspace = true
anyhow.workspace = true
thiserror.workspace = true
derive-new.workspace = true
log.workspace = true
ndarray-stats = "0.5.1"
num = "0.4.1"
realfft = "3.3.0"
ndarray = "0.15.6"
cfg-if = "1.0.0"
serde = "1.0.197"
tokenizers = { version = "0.13.4", default-features = false, features=["unstable_wasm"] }
lazy_static = "1.4.0"
web-time = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }  
serde-wasm-bindgen = "0.4.5"
ratchet-hub = { path = "../ratchet-hub" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hf-hub = "0.3.2"

[dev-dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-test = "0.3.41"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
npyz = { workspace = true }
hound = { version = "3.5.0" }
env_logger = "0.11.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pyo3 = "0.20.2"
numpy = "0.20.0"

