[package]
name = "ratchet-models"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
ci = []
pyo3 = []

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true 

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

[dependencies]
ratchet = { path = "../ratchet-core" }
ratchet-nn = { path = "../ratchet-nn" }
ratchet-loader = { path = "../ratchet-loader" }
byteorder.workspace = true
anyhow.workspace = true
thiserror.workspace = true
derive-new = { workspace = true }
log.workspace = true
ndarray-stats = { workspace = true }
num = { workspace = true }
realfft = { workspace = true }
ndarray = { workspace = true }
cfg-if = { workspace = true }
serde = { workspace = true }
tokenizers = { version = "0.13.4", default-features = false, features=["unstable_wasm"] }
lazy_static = { workspace = true }
web-time = { workspace = true }
clap = { workspace = true }
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }  
serde-wasm-bindgen = "0.4.5"
ratchet-hub = { path = "../ratchet-hub" }
tsify = "0.4.5"
js-sys = { workspace = true } 

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratchet = { path = "../ratchet-core", features = ["pyo3"] }
hf-hub.workspace = true

[dev-dependencies]
ratchet = { path = "../ratchet-core" }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
npyz = { workspace = true }
hound = { workspace = true }
env_logger = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ratchet = { path = "../ratchet-core", features = ["pyo3"] }
pyo3 = "0.20.2"
numpy = "0.20.0"

