[package]
name = "ratchet-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pyo3 = ["ratchet/pyo3"]

[dependencies]
anyhow.workspace = true
derive-new = { workspace = true }
ratchet = { path = "../ratchet-core" }
half = {workspace = true}

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
hf-hub = { workspace = true }
ratchet-loader = { path = "../ratchet-loader" }
tokenizers.workspace = true
