[package]
name = "ratchet-web"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A web-first, cross-platform ML framework."
keywords = ["llm","wasm","transformers","webgpu","ml","machine-learning","deep-learning"]
repository = "https://github.com/FL33TW00D/ratchet"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true 

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ratchet-models = { path = "../ratchet-models" }
ratchet-hub = { path = "../ratchet-hub" }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.64"
indexed_db_futures = "0.4.1"
thiserror.workspace = true
anyhow.workspace = true
serde = "1.0.197"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features=["color"] }
log.workspace = true
hound = "3.5.1"
fern = "0.6.2"
chrono = "0.4.34"
tsify = "0.4.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.6", features = ["js"] }

[dependencies.web-sys]
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
  'ReadableStreamGetReaderOptions',
  'ReadableStreamReaderMode',
  'Window',
  'Navigator',
  'StorageManager',
  'Cache',
  'CacheStorage',
  'IdbKeyRange',
]
version = "0.3.64"

[dev-dependencies]
wasm-bindgen-test.workspace = true
ratchet-hub = { path = "../ratchet-hub" }

