[package]
name = "ratchet-web"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A web-first, cross-platform ML framework."
keywords = ["llm","wasm","transformers","webgpu","ml","machine-learning","deep-learning"]
repository = "https://github.com/FL33TW00D/ratchet"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true 

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ratchet-models = { path = "../ratchet-models" }
ratchet-hub = { path = "../ratchet-hub" }
ratchet-loader = { path = "../ratchet-loader" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
indexed_db_futures = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true, features = ["color"] }
log.workspace = true
hound = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokenizers = { version = "0.13.4", default-features = false, features=["unstable_wasm"] }
futures = "0.3.30"
[dependencies.web-sys]
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
  'ReadableStreamGetReaderOptions',
  'ReadableStreamReaderMode',
  'Window',
  'Navigator',
  'StorageManager',
  'Cache',
  'CacheStorage',
  'IdbKeyRange',
]
workspace = true


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.6", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test.workspace = true
ratchet-hub = { path = "../ratchet-hub" }

