[package]
name = "ratchet"
version = "0.1.0"
edition = "2021"

[features]
gpu_profiling = []

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
derive-new = { workspace = true }
num-traits = { workspace = true }
log = "0.4.20"
thiserror = "1.0.56"
rustc-hash = "1.1.0"
slotmap = "1.0.7"
parking_lot = "0.12.1"
smallvec = "1.11.2"
encase = "0.7.0"
glam = "0.25.0"
pollster = "0.3.0"
